# kopai-integration-examples

./: .gitignore  README.md  package.json
.github/workflows/: ci.yml
cpp/: .gitignore  CMakeLists.txt  README.md  flake.nix  vcpkg.json
cpp/src/: main.cpp
dotnet/: .gitignore  Program.cs  README.md  dotnet-example.csproj  flake.nix
erlang/: .gitignore  README.md  flake.nix  mix.exs
erlang/config/: config.exs  runtime.exs
erlang/lib/: elixir_example.ex
go/: .gitignore  README.md  flake.nix  go.mod  go.sum  main.go
java/: .gitignore  README.md  Server.java
node-js/: .gitignore  README.md  instrumentation.mjs  package-lock.json  package.json
php/: .gitignore  README.md  composer.json  flake.nix  index.php
python/: .gitignore  README.md  app.py  flake.nix  requirements.txt
react-spa/: README.md
react-spa/backend/: instrumentation.mjs  package.json  server.js
react-spa/frontend/: OTEL_INSTRUMENTATION.md  package.json
react-spa/frontend/src/: App.jsx  instrumentation.jsx  main.jsx
ruby/: .gitignore  Gemfile  README.md  app.rb  flake.nix
rust/: .gitignore  Cargo.toml  README.md  flake.nix
rust/src/: main.rs
